= 0.1.1 8/17/06
* [FIXED] No indenting generated Rakefile code. [26]
* [NEW] Logging! [22]
* [NEW] Added a description to the extension building task [21]
* [NEW] Added additional_code accessor. If you have stuff you want to add to the Rakefile the Generator doesn't provide for, feel free to stick it (in string form!) in here. Yes, I know this smells. If you have a better suggestion, PDI and tell me about it. [20]
* [FIXED] Use proper file extensions for libraries. [18]
* [FIXED] default source pattern for Generator [17]

= 0.1.0  6/28/06
* First release.