@@ -1,0 +1,18 @@
+* install task for output Rakefile
+* command-line configuration options
+
+BUGS
+* Fix libpath (shouldn't default to /usr/local/lib)
+
+
+From Tim Hunter:
+
+I'm trying to write a Rakefile for RMagick with mkrf. The first thing I miss is the equivalent of autoconf's AC_CHECK_PROGS. I think this is the find_executable method in mkmf
+
+It would also be nice to have some kind of automatic option processing for --with-THING, --without-THING, --enable-THING, --disable-THING options.
+
+Two more things.
+
+1) How do I add arbitrary strings to the gcc options such as the values of LDFLAGS, CPPFLAGS, and CFLAGS?
+
+2) RMagick uses about 100 feature test symbols (HAVE_xxx, etc.), too many to specify on the command line. It must be possible to create a configuration header file from a template, like the file created by AC_CONFIG_HEADERS.
